@@ -15,6 +15,8 @@ import com.powsybl.iidm.network.extensions.LoadDetail;
 import com.powsybl.openloadflow.graph.GraphConnectivity;
 import com.powsybl.openloadflow.network.*;
 import com.powsybl.openloadflow.util.PerUnit;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.util.*;
 import java.util.stream.Collectors;
@@ -25,21 +27,27 @@ import java.util.stream.Collectors;
  */
 public class PropagatedContingency {
 
+    protected static final Logger LOGGER = LoggerFactory.getLogger(PropagatedContingency.class);
+
     private final Contingency contingency;
 
     private final int index;
 
-    private final Set<String> branchIdsToOpen;
-
     private final Set<Switch> switchesToOpen;
 
-    private final Set<String> hvdcIdsToOpen; // for HVDC in AC emulation
+    private final Set<Terminal> terminalsToDisconnect;
 
-    private final Set<String> generatorIdsToLose;
+    private final Set<String> busIdsToLose;
 
-    private final Map<String, PowerShift> loadIdsToShift;
+    private final Set<String> branchIdsToOpen = new LinkedHashSet<>();
 
-    private final Map<String, AdmittanceShift> shuntIdsToShift;
+    private final Set<String> hvdcIdsToOpen = new HashSet<>(); // for HVDC in AC emulation
+
+    private final Set<String> generatorIdsToLose = new HashSet<>();
+
+    private final Map<String, PowerShift> loadIdsToLoose = new HashMap<>();
+
+    private final Map<String, AdmittanceShift> shuntIdsToShift = new HashMap<>();
 
     public Contingency getContingency() {
         return contingency;
@@ -47,6 +55,10 @@ public class PropagatedContingency {
 
     public int getIndex() {
         return index;
+    }
+
+    public Set<String> getBusIdsToLose() {
+        return busIdsToLose;
     }
 
     public Set<String> getBranchIdsToOpen() {
@@ -65,29 +77,21 @@ public class PropagatedContingency {
         return generatorIdsToLose;
     }
 
-    public Map<String, PowerShift> getLoadIdsToShift() {
-        return loadIdsToShift;
+    public Map<String, PowerShift> getLoadIdsToLoose() {
+        return loadIdsToLoose;
     }
 
     public Map<String, AdmittanceShift> getShuntIdsToShift() {
         return shuntIdsToShift;
     }
 
-    public PropagatedContingency(Contingency contingency, int index, Set<String> branchIdsToOpen, Set<String> hvdcIdsToOpen,
-                                 Set<Switch> switchesToOpen, Set<String> generatorIdsToLose,
-                                 Map<String, PowerShift> loadIdsToShift, Map<String, AdmittanceShift> shuntIdsToShift) {
+    public PropagatedContingency(Contingency contingency, int index, Set<Switch> switchesToOpen, Set<Terminal> terminalsToDisconnect,
+                                 Set<String> busIdsToLose) {
         this.contingency = Objects.requireNonNull(contingency);
         this.index = index;
-        this.branchIdsToOpen = Objects.requireNonNull(branchIdsToOpen);
-        this.hvdcIdsToOpen = Objects.requireNonNull(hvdcIdsToOpen);
         this.switchesToOpen = Objects.requireNonNull(switchesToOpen);
-        this.generatorIdsToLose = Objects.requireNonNull(generatorIdsToLose);
-        this.loadIdsToShift = Objects.requireNonNull(loadIdsToShift);
-        this.shuntIdsToShift = Objects.requireNonNull(shuntIdsToShift);
-
-        for (Switch sw : switchesToOpen) {
-            branchIdsToOpen.add(sw.getId());
-        }
+        this.terminalsToDisconnect = Objects.requireNonNull(terminalsToDisconnect);
+        this.busIdsToLose = Objects.requireNonNull(busIdsToLose);
     }
 
     private static PowerShift getLoadPowerShift(Load load, boolean slackDistributionOnConformLoad) {
@@ -100,66 +104,102 @@ public class PropagatedContingency {
         }
         return new PowerShift(load.getP0() / PerUnit.SB,
                               variableActivePower / PerUnit.SB,
-                              load.getQ0() / PerUnit.SB);
+                              load.getQ0() / PerUnit.SB); // ensurePowerFactorConstant is not supported.
     }
 
-    public static List<PropagatedContingency> createList(Network network, List<Contingency> contingencies,
-                                                         Set<Switch> allSwitchesToOpen, boolean shuntCompensatorVoltageControlOn,
-                                                         boolean slackDistributionOnConformLoad, boolean hvdcAcEmulation,
+    public static List<PropagatedContingency> createList(Network network, List<Contingency> contingencies, LfTopoConfig topoConfig,
                                                          boolean contingencyPropagation) {
         List<PropagatedContingency> propagatedContingencies = new ArrayList<>();
         for (int index = 0; index < contingencies.size(); index++) {
             Contingency contingency = contingencies.get(index);
             PropagatedContingency propagatedContingency =
-                    PropagatedContingency.create(network, contingency, index, shuntCompensatorVoltageControlOn, slackDistributionOnConformLoad, hvdcAcEmulation, contingencyPropagation);
+                    PropagatedContingency.create(network, contingency, index, contingencyPropagation);
             propagatedContingencies.add(propagatedContingency);
-            allSwitchesToOpen.addAll(propagatedContingency.switchesToOpen);
+            topoConfig.getSwitchesToOpen().addAll(propagatedContingency.switchesToOpen);
+            topoConfig.getBusIdsToLose().addAll(propagatedContingency.busIdsToLose);
         }
         return propagatedContingencies;
     }
 
-    private static PropagatedContingency create(Network network, Contingency contingency, int index, boolean shuntCompensatorVoltageControlOn,
-                                                boolean slackDistributionOnConformLoad, boolean hvdcAcEmulation, boolean contingencyPropagation) {
+    public static List<PropagatedContingency> completeList(List<PropagatedContingency> propagatedContingencies, boolean shuntCompensatorVoltageControlOn,
+                                                           boolean slackDistributionOnConformLoad, boolean hvdcAcEmulation, boolean breakers) {
+        // complete definition of contingencies after network loading
+        // in order to have the good busId.
+        for (PropagatedContingency propagatedContingency : propagatedContingencies) {
+            propagatedContingency.complete(shuntCompensatorVoltageControlOn, slackDistributionOnConformLoad, hvdcAcEmulation, breakers);
+        }
+        return propagatedContingencies;
+    }
+
+    private static PropagatedContingency create(Network network, Contingency contingency, int index, boolean contingencyPropagation) {
         Set<Switch> switchesToOpen = new HashSet<>();
         Set<Terminal> terminalsToDisconnect = new HashSet<>();
-
+        Set<String> busIdsToLose = new HashSet<>();
         // process elements of the contingency
         for (ContingencyElement element : contingency.getElements()) {
             Identifiable<?> identifiable = getIdentifiable(network, element);
-            if (contingencyPropagation) {
-                ContingencyTripping.createContingencyTripping(network, identifiable).traverse(switchesToOpen, terminalsToDisconnect);
-            }
-            terminalsToDisconnect.addAll(getTerminals(identifiable));
-            if (identifiable instanceof Switch) {
-                switchesToOpen.add((Switch) identifiable);
+            switch (identifiable.getType()) {
+                case BUS:
+                    Bus bus = (Bus) identifiable;
+                    if (bus.getVoltageLevel().getTopologyKind() == TopologyKind.BUS_BREAKER) {
+                        busIdsToLose.add(identifiable.getId());
+                    } else {
+                        throw new UnsupportedOperationException("Unsupported contingency element type " + element.getType() + ": voltage level should be in bus/breaker topology");
+                    }
+                    break;
+                case BUSBAR_SECTION:
+                    if (contingencyPropagation) {
+                        ContingencyTripping.createContingencyTripping(network, identifiable).traverse(switchesToOpen, terminalsToDisconnect);
+                    } else {
+                        ContingencyTripping.createBusbarSectionMinimalTripping(network, (BusbarSection) identifiable).traverse(switchesToOpen, terminalsToDisconnect);
+                    }
+                    terminalsToDisconnect.addAll(getTerminals(identifiable));
+                    break;
+                case SWITCH:
+                    switchesToOpen.add((Switch) identifiable);
+                    break;
+                default:
+                    if (contingencyPropagation) {
+                        ContingencyTripping.createContingencyTripping(network, identifiable).traverse(switchesToOpen, terminalsToDisconnect);
+                    }
+                    terminalsToDisconnect.addAll(getTerminals(identifiable));
             }
         }
+        return new PropagatedContingency(contingency, index, switchesToOpen, terminalsToDisconnect, busIdsToLose);
+    }
 
-        boolean breakers = !switchesToOpen.isEmpty();
-
-        Set<String> branchIdsToOpen = new LinkedHashSet<>();
-        Set<String> hvdcIdsToOpen = new HashSet<>();
-        Set<String> generatorIdsToLose = new HashSet<>();
-        Map<String, PowerShift> loadIdsToShift = new HashMap<>();
-        Map<String, AdmittanceShift> shuntIdsToShift = new HashMap<>();
+    private void complete(boolean shuntCompensatorVoltageControlOn, boolean slackDistributionOnConformLoad,
+                         boolean hvdcAcEmulation, boolean breakers) {
+        for (Switch sw : switchesToOpen) {
+            branchIdsToOpen.add(sw.getId());
+        }
 
         // process terminals disconnected, in particular process injection power shift
         for (Terminal terminal : terminalsToDisconnect) {
             Connectable<?> connectable = terminal.getConnectable();
             switch (connectable.getType()) {
-                case LINE:
-                case TWO_WINDINGS_TRANSFORMER:
-                case DANGLING_LINE:
+                case LINE,
+                     TWO_WINDINGS_TRANSFORMER:
                     branchIdsToOpen.add(connectable.getId());
                     break;
+                case DANGLING_LINE:
+                    DanglingLine dl = (DanglingLine) connectable;
+                    if (dl.isPaired()) {
+                        branchIdsToOpen.add(dl.getTieLine().orElseThrow().getId());
+                    } else {
+                        branchIdsToOpen.add(dl.getId());
+                    }
+                    break;
 
-                case GENERATOR:
+                case GENERATOR,
+                     STATIC_VAR_COMPENSATOR,
+                     BATTERY:
                     generatorIdsToLose.add(connectable.getId());
                     break;
 
                 case LOAD:
                     Load load = (Load) connectable;
-                    addPowerShift(load.getTerminal(), loadIdsToShift, getLoadPowerShift(load, slackDistributionOnConformLoad), breakers);
+                    loadIdsToLoose.put(load.getId(), getLoadPowerShift(load, slackDistributionOnConformLoad));
                     break;
 
                 case SHUNT_COMPENSATOR:
@@ -167,9 +207,9 @@ public class PropagatedContingency {
                     if (shuntCompensatorVoltageControlOn && shunt.isVoltageRegulatorOn()) {
                         throw new UnsupportedOperationException("Shunt compensator '" + shunt.getId() + "' with voltage control on: not supported yet");
                     }
-                    double nominalV = shunt.getTerminal().getVoltageLevel().getNominalV();
-                    shuntIdsToShift.put(shunt.getId(), new AdmittanceShift(-shunt.getG() * nominalV * nominalV / PerUnit.SB,
-                            shunt.getB() * nominalV * nominalV / PerUnit.SB));
+                    double zb = PerUnit.zb(shunt.getTerminal().getVoltageLevel().getNominalV());
+                    shuntIdsToShift.put(shunt.getId(), new AdmittanceShift(shunt.getG() * zb,
+                            shunt.getB() * zb));
                     break;
 
                 case HVDC_CONVERTER_STATION:
@@ -178,13 +218,15 @@ public class PropagatedContingency {
                     if (control != null && control.isEnabled() && hvdcAcEmulation) {
                         hvdcIdsToOpen.add(station.getHvdcLine().getId());
                     }
+                    // FIXME
+                    // the other converter station should be considered to if in the same synchronous component (hvdc setpoint mode).
                     if (connectable instanceof VscConverterStation) {
                         generatorIdsToLose.add(connectable.getId());
                     } else {
                         LccConverterStation lcc = (LccConverterStation) connectable;
-                        PowerShift lccPowerShift = new PowerShift(HvdcConverterStations.getConverterStationTargetP(lcc) / PerUnit.SB, 0,
-                                HvdcConverterStations.getLccConverterStationLoadTargetQ(lcc) / PerUnit.SB);
-                        addPowerShift(lcc.getTerminal(), loadIdsToShift, lccPowerShift, breakers);
+                        PowerShift lccPowerShift = new PowerShift(HvdcConverterStations.getConverterStationTargetP(lcc, breakers) / PerUnit.SB, 0,
+                                HvdcConverterStations.getLccConverterStationLoadTargetQ(lcc, breakers) / PerUnit.SB);
+                        loadIdsToLoose.put(lcc.getId(), lccPowerShift);
                     }
                     break;
 
@@ -203,25 +245,17 @@ public class PropagatedContingency {
                             + connectable.getType());
             }
         }
-
-        return new PropagatedContingency(contingency, index, branchIdsToOpen, hvdcIdsToOpen, switchesToOpen,
-                                         generatorIdsToLose, loadIdsToShift, shuntIdsToShift);
-    }
-
-    private static void addPowerShift(Terminal terminal, Map<String, PowerShift> loadIdsToShift, PowerShift powerShift, boolean breakers) {
-        Bus bus = breakers ? terminal.getBusBreakerView().getBus() : terminal.getBusView().getBus();
-        if (bus != null) {
-            loadIdsToShift.computeIfAbsent(bus.getId(), k -> new PowerShift()).add(powerShift);
-        }
     }
 
     private static List<? extends Terminal> getTerminals(Identifiable<?> identifiable) {
         if (identifiable instanceof Connectable<?>) {
             return ((Connectable<?>) identifiable).getTerminals();
         }
-        if (identifiable instanceof HvdcLine) {
-            HvdcLine hvdcLine = (HvdcLine) identifiable;
-            return Arrays.asList(hvdcLine.getConverterStation1().getTerminal(), hvdcLine.getConverterStation2().getTerminal());
+        if (identifiable instanceof HvdcLine hvdcLine) {
+            return List.of(hvdcLine.getConverterStation1().getTerminal(), hvdcLine.getConverterStation2().getTerminal());
+        }
+        if (identifiable instanceof TieLine line) {
+            return List.of(line.getDanglingLine1().getTerminal(), line.getDanglingLine2().getTerminal());
         }
         if (identifiable instanceof Switch) {
             return Collections.emptyList();
@@ -233,9 +267,9 @@ public class PropagatedContingency {
         Identifiable<?> identifiable;
         String identifiableType;
         switch (element.getType()) {
-            case BRANCH:
-            case LINE:
-            case TWO_WINDINGS_TRANSFORMER:
+            case BRANCH,
+                 LINE,
+                 TWO_WINDINGS_TRANSFORMER:
                 identifiable = network.getBranch(element.getId());
                 identifiableType = "Branch";
                 break;
@@ -250,6 +284,10 @@ public class PropagatedContingency {
             case GENERATOR:
                 identifiable = network.getGenerator(element.getId());
                 identifiableType = "Generator";
+                break;
+            case STATIC_VAR_COMPENSATOR:
+                identifiable = network.getStaticVarCompensator(element.getId());
+                identifiableType = "Static var compensator";
                 break;
             case LOAD:
                 identifiable = network.getLoad(element.getId());
@@ -267,6 +305,18 @@ public class PropagatedContingency {
                 identifiable = network.getThreeWindingsTransformer(element.getId());
                 identifiableType = "Three windings transformer";
                 break;
+            case BUSBAR_SECTION:
+                identifiable = network.getBusbarSection(element.getId());
+                identifiableType = "Busbar section";
+                break;
+            case TIE_LINE:
+                identifiable = network.getTieLine(element.getId());
+                identifiableType = "Tie line";
+                break;
+            case BUS:
+                identifiable = network.getBusBreakerView().getBus(element.getId());
+                identifiableType = "Configured bus";
+                break;
             default:
                 throw new UnsupportedOperationException("Unsupported contingency element type: " + element.getType());
         }
@@ -276,21 +326,60 @@ public class PropagatedContingency {
         return identifiable;
     }
 
+    public boolean hasNoImpact() {
+        return branchIdsToOpen.isEmpty() && hvdcIdsToOpen.isEmpty() && generatorIdsToLose.isEmpty()
+                && loadIdsToLoose.isEmpty() && shuntIdsToShift.isEmpty() && busIdsToLose.isEmpty();
+    }
+
     public Optional<LfContingency> toLfContingency(LfNetwork network) {
         // update connectivity with triggered branches of this network
         GraphConnectivity<LfBus, LfBranch> connectivity = network.getConnectivity();
-        connectivity.setMainComponentVertex(network.getSlackBus());
         connectivity.startTemporaryChanges();
-        branchIdsToOpen.stream()
+
+        List<LfBranch> branchesToOpen = branchIdsToOpen.stream()
                 .map(network::getBranchById)
                 .filter(Objects::nonNull) // could be in another component
-                .filter(b -> b.getBus1() != null && b.getBus2() != null)
+                .collect(Collectors.toList());
+
+        // we add the branches connected to buses to lose.
+        busIdsToLose.stream().map(network::getBusById)
+                .filter(Objects::nonNull)
+                .forEach(bus -> {
+                    if (bus.isSlack()) {
+                        // slack bus disabling is not supported
+                        // we keep the slack bus enabled and the connected branches
+                        LOGGER.error("Contingency '{}' leads to the loss of a slack bus: slack bus kept", bus.getId());
+                    } else {
+                        branchesToOpen.addAll(bus.getBranches());
+                    }
+                });
+
+        branchesToOpen.stream()
+                .filter(LfBranch::isConnectedAtBothSides)
                 .forEach(connectivity::removeEdge);
+
+        if (connectivity.getConnectedComponent(network.getSlackBus()).size() == 1) {
+            // FIXME
+            // If a contingency leads to an isolated slack bus, this bus is considered as the main component.
+            // In that case, we have an issue with a different number of variables and equations.
+            LOGGER.error("Contingency '{}' leads to an isolated slack bus: not supported", contingency.getId());
+            connectivity.undoTemporaryChanges();
+            return Optional.empty();
+        }
 
         // add to contingency description buses and branches that won't be part of the main connected
         // component in post contingency state
+        int createdSynchronousComponents = connectivity.getNbConnectedComponents() - 1;
         Set<LfBus> buses = connectivity.getVerticesRemovedFromMainComponent();
-        Set<LfBranch> branches = connectivity.getEdgesRemovedFromMainComponent();
+        Set<LfBranch> branches = new HashSet<>(connectivity.getEdgesRemovedFromMainComponent());
+
+        // we should manage branches open at one side
+        branchesToOpen.stream()
+                .filter(b -> !b.isConnectedAtBothSides())
+                .forEach(branches::add);
+        for (LfBus bus : buses) {
+            bus.getBranches().stream().filter(b -> !b.isConnectedAtBothSides()).forEach(branches::add);
+        }
 
         // reset connectivity to discard triggered branches
         connectivity.undoTemporaryChanges();
@@ -312,13 +401,15 @@ public class PropagatedContingency {
             }
         }
 
-        Map<LfBus, PowerShift> busesLoadShift = new HashMap<>(1);
-        for (var e : loadIdsToShift.entrySet()) {
-            String busId = e.getKey();
-            PowerShift shift = e.getValue();
-            LfBus bus = network.getBusById(busId);
-            if (bus != null) { // could be in another component
-                busesLoadShift.put(bus, shift);
+        Map<LfLoad, LfLostLoad> loads = new HashMap<>(1);
+        for (var e : loadIdsToLoose.entrySet()) {
+            String loadId = e.getKey();
+            PowerShift powerShift = e.getValue();
+            LfLoad load = network.getLoadById(loadId);
+            if (load != null) { // could be in another component
+                LfLostLoad lostLoad = loads.computeIfAbsent(load, k -> new LfLostLoad());
+                lostLoad.getPowerShift().add(powerShift);
+                lostLoad.getOriginalIds().add(loadId);
             }
         }
 
@@ -328,15 +419,25 @@ public class PropagatedContingency {
                 .filter(Objects::nonNull) // could be in another component
                 .collect(Collectors.toSet());
 
+        for (LfHvdc hvdcLine : network.getHvdcs()) {
+            // FIXME
+            // if we loose a bus with a converter station, the other converter station should be considered to if in the
+            // same synchronous component (hvdc setpoint mode).
+            if (buses.contains(hvdcLine.getBus1()) || buses.contains(hvdcLine.getBus2())) {
+                hvdcs.add(hvdcLine);
+            }
+        }
+
         if (branches.isEmpty()
                 && buses.isEmpty()
                 && shunts.isEmpty()
-                && busesLoadShift.isEmpty()
+                && loads.isEmpty()
                 && generators.isEmpty()
                 && hvdcs.isEmpty()) {
+            LOGGER.debug("Contingency '{}' has no impact", contingency.getId());
             return Optional.empty();
         }
 
-        return Optional.of(new LfContingency(contingency.getId(), index, buses, branches, shunts, busesLoadShift, generators, hvdcs));
+        return Optional.of(new LfContingency(contingency.getId(), index, createdSynchronousComponents, new DisabledNetwork(buses, branches, hvdcs), shunts, loads, generators));
     }
 }
